<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="app_name">Hours</string>
    <string name="datePicker_setButton">OK</string>
    <string name="datePicker_clearButton">CLEAR</string>
    <string name="datePicker_cancelButton">CANCEL</string>
    <string name="error_in_json">Error json provided by server</string>
    <string name="todo">Todo</string>
    <string name="textview">TextView</string>
    <string name="face_register">register</string>
    <string name="face_liveness_detect">liveness detect</string>
    <string name="init_failed">init failed,code is %d</string>
    <string name="permission_denied">permission denied!</string>
    <string name="active_success">active success</string>
    <string name="already_activated">already activated</string>
    <string name="active_failed">active failed,code is %d</string>
    <string name="read_file">This app needs access to your file storage so that it can read photos.</string>
    <string name="___LIBRARY___SETTINGS___SECTION___"></string>
    <string name="library_settings">Library Settings</string>
    <string name="scan_device_for_new_books">Folders to Scan</string>
    <string name="add_folder">Add a folder</string>
    <string name="archives">Archives</string>
    <string name="other">Other</string>
    <string name="you_need_to_update_the_library">Now update Library to apply changes</string>
    <string name="in_the_author_s_name_first_the_surname">Author\'s last name first</string>
    <string name="orientation">Orientation</string>
    <string name="automatic">Auto</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="landscape_180">Landscape (flipped)</string>
    <string name="portrait_180">Portrait (flipped)</string>
    <string name="system_language">System</string>
    <string name="system">System</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="black">Dark</string>
    <string name="theme_color">Trim</string>
    <string name="widget">Widget</string>
    <string name="show">Show</string>
    <string name="layout">Layout</string>
    <string name="number_of_books">Books</string>
    <string name="remember_reading_mode">Remember reading mode</string>
    <string name="opening_the_last_book_when_the_application_starts">Load last book at startup</string>
    <string name="show_application_close_dialog_every_time">Confirm exit upon Back gesture</string>
    <string name="display_all_file_types_in_folders">Display all file types</string>
    <string name="show_the_dialog_what_is_new_for_updates">Show What\'s New after updates</string>
    <string name="what_is_new_in">What is new in</string>
    <string name="full_list_of_changes_with_images_web_pdf_">Download a full list of changes (PDF file)</string>
    <string name="search_for_text_in_documents">Search for Text</string>
    <string name="search_in_the_subfolders">Include subfolders</string>
    <string name="stop">Stop</string>
    <string name="document_converter_online_">Convert Document Online</string>
    <string name="book_covers">Book Covers</string>
    <string name="cover_image_size">Thumbnail size</string>
    <string name="column_count">Columns</string>
    <string name="show_book_covers">Display book covers</string>
    <string name="enable_effect_of_the_book_cover">Mock print book covers</string>
    <string name="crop_images_in_the_book_cover">Crop book covers</string>
    <string name="borders_and_shadow_around_the_book_cover">Display borders and shadows</string>
    <string name="tabs_position">Tabs</string>
    <string name="show_preferences_tab_in_the_left_menu">Animate Preferences (slide-out)</string>
    <string name="visible">Show</string>
    <string name="application_user_guide_">User Guide</string>
    <string name="import_or_export_application_settings_to_json_file">Backup</string>
    <string name="import_">Import</string>
    <string name="export_">Export</string>
    <string name="automatic_export_backup">Auto-export (back up) current session on exit</string>
    <string name="product">Product</string>
    <string name="version">Version</string>
    <string name="licence_gnu_gpl_v3_0">License: GNU GPL v3.0</string>
    <string name="licenses_for_libraries">Libraries\' Licenses</string>
    <string name="autor_ivan_ivanenko">Developer: Ivan Ivanenko</string>
    <string name="support">Support</string>
    <string name="web">Home page</string>
    <string name="beta_version">Beta version</string>
    <string name="archive">Archive</string>
    <string name="rate_pdf_reader1">Please leave feedback and rate us on Google Play: it\'s very important for further development</string>
    <string name="___PREFERENCES___SECTION___"></string>
    <string name="formatted_text">Formatted text (pseudo-graphics)</string>
    <string name="continuous_text">Continuous text (no line breaks)</string>
    <string name="customize_fonts">Configure Fonts</string>
    <string name="regular_font">Regular</string>
    <string name="bold_font">Bold</string>
    <string name="italic_font">Italic</string>
    <string name="bold_italic_font">Bold Italic</string>
    <string name="font_for_headers">Headings</string>
    <string name="enable_volume_keys">Navigate with volume keys</string>
    <string name="reverse_keys">Reverse keys</string>
    <string name="screen_orientation">Screen orientation</string>
    <string name="open_in_the_dictionary">Open selection in dictionary</string>
    <string name="remember_dictionary">Choose Dictionary</string>
    <string name="dictionary">Dictionary</string>
    <string name="day">Day</string>
    <string name="nigth">Night</string>
    <string name="___READING___SETTINGS___SECTION___"></string>
    <string name="reading_settings">Reading Settings</string>
    <string name="folder_with_fonts">Fonts</string>
    <string name="text_align">Text alignment</string>
    <string name="width">Justified</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="custom_css">Custom CSS Code</string>
    <string name="styles">Styles</string>
    <string name="document_styles">Document</string>
    <string name="user_styles">User-defined</string>
    <string name="automatic_hyphenation">Enable hyphenation</string>
    <string name="empty_line">Stanza break</string>
    <string name="margin_width">Page margins</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="links_color_day">Links color, day</string>
    <string name="links_color_night">Links color, night</string>
    <string name="___ADVANCED___SETTINGS___SECTION___"></string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="direction_of_scrolling">Scroll direction</string>
    <string name="direction_of_reading_rtl_">Reading direction</string>
    <string name="left_to_rigth">LTR</string>
    <string name="right_to_left">RTL</string>
    <string name="right_page_then_left_page_rtl_">Force right page</string>
    <string name="rotate_page">Rotate angle</string>
    <string name="rotate_default">Default</string>
    <string name="tap_zone_size">Tap zones (edges)</string>
    <string name="customize_tap_zones">Configure Tap Zones</string>
    <string name="left_side">Left</string>
    <string name="right_side">Right</string>
    <string name="top_side">Top</string>
    <string name="bottom_side">Bottom</string>
    <string name="next_page">Next Page</string>
    <string name="previous_page">Previous Page</string>
    <string name="db_do_nothing">Do Nothing</string>
    <string name="remind_about_rest_every">Eye rest reminder every</string>
    <string name="action_on_double_tap">Double tap (center)</string>
    <string name="db_auto_scroll">Auto-Scroll</string>
    <string name="opening_book_with_losed_lock">Lock page in place</string>
    <string name="opening_book_with_cropped_borders">Auto-crop white space</string>
    <string name="db_auto_alignemnt">Fit Page</string>
    <string name="db_auto_center_horizontally">Center (no rescale)</string>
    <string name="zoom_in_zoom_out">Zoom In/Out</string>
    <string name="enhancements_for_oled_display">Night-mode enhancement for AMOLED displays</string>
    <string name="ignore_annotations_on_click">Ignore touching annotations</string>
    <string name="save_new_annotations_automatically">Auto-save annotations on exit</string>
    <string name="selecting_text_by_letters">Select text letter by letter (Asian languages)</string>
    <string name="change_the_automatic_scrolling_speed_with_the_volume_keys">Control auto-scroll speed with volume keys</string>
    <string name="enable_brightness_adjustment_on_the_left_of_the_screen">Adjust brightness by left-edge slides</string>
    <string name="scroll_speed">Mouse wheel sensitivity</string>
    <string name="page_quality">Page quality</string>
    <string name="pages_in_memory">Pages in memory</string>
    <string name="screen_turn_off_after_inactivity_minutes_">Turn off screen after (min)</string>
    <string name="___STATUS___BAR___SETTINGS___SECTION___"></string>
    <string name="status_bar">Status Bar</string>
    <string name="show_status_bar">Show status bar</string>
    <string name="show_progress_of_reading">Enable progress bar</string>
    <string name="enable_rewind_of_pages_using_the_read_progress_line">Navigate by sliding across status bar</string>
    <string name="text_size">Font size</string>
    <string name="line_height">Progress bar height</string>
    <string name="text_color_day">Font color, day</string>
    <string name="text_color_night">Font color, night</string>
    <string name="___MULTIPLE___SECTIONS___"></string>
    <string name="preferences">Preferences</string>
    <string name="language">Language</string>
    <string name="font_size">Font size</string>
    <string name="brightness">Brightness</string>
    <string name="bluelight_filter">Bluelight Filter</string>
    <string name="password">Password</string>
    <string name="restore_defaults_short">Restore default</string>
    <string name="customize">Configure</string>
    <string name="color">Color</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="minutes">Minutes</string>
    <string name="close_book">Close Book</string>
    <string name="background">Background</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="invalid_color_value">Invalid value</string>
    <string name="add">Add</string>
    <string name="search">Find</string>
    <string name="export_bookmarks">Export</string>
    <string name="simple_scroll_animation">Animate page transition (scroll)</string>
    <string name="___TABS___SECTION___"></string>
    <string name="library">Library</string>
    <string name="login_mobile">请输入手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_verify_code">获取验证码</string>
    <string name="register_identy">请输入验证码</string>
    <string name="login_forgot_password">忘记密码</string>
    <string name="login_register">用户注册</string>
    <string name="register_login">用户登录</string>
    <string name="login">登录</string>
    <string name="submit">提交</string>
    <string name="confirm">确认</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="cancel">取消</string>
    <string name="confirm_out">确定退出么</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_edit_hint">请输入您的意见和建议</string>
</resources>