<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_20"
    android:layout_marginTop="@dimen/margin_10"
    tools:context=".Fragment.AuthFragment.PasswordLoginFragment">

    <EditText
        android:id="@+id/edFrMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_mobile"
        android:inputType="phone"
        android:layout_marginTop="@dimen/margin_10"
        android:paddingBottom="@dimen/padding_10"
        android:textSize="@dimen/content_normal_size"/>

    <EditText
        android:id="@+id/edFrPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/content_normal_size"
        android:layout_marginTop="@dimen/margin_10"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/padding_10"
        android:hint="@string/login_password"/>

    <Button
        android:id="@+id/btnFrLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_45"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="@dimen/content_normal_size"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_30"
        android:background="@drawable/button_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFrForgot"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="@dimen/content_normal_size"
            android:text="@string/login_forgot_password"/>

        <TextView
            android:id="@+id/tvFrRegister"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/content_normal_size"
            android:text="@string/login_register"/>

    </LinearLayout>
</LinearLayout>