<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/margin_350"
    android:layout_height="@dimen/margin_200"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/button_back_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_150">

        <TextView
            android:id="@+id/tvOutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/navigation_title_size"
            android:text="@string/confirm_out"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:text=""
        android:textColor="@color/seperator"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
        android:id="@+id/tvOutCancel"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="@dimen/font_size_20"
        android:textColor="@color/colorAccent"
        android:text="@string/cancel"/>

        <TextView
        android:id="@+id/tvOutConfirm"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="@dimen/font_size_20"
        android:textColor="@color/colorAccent"
        android:text="@string/confirm"/>
    </LinearLayout>

</LinearLayout>