<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Activity.Auth.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <RelativeLayout
            android:id="@+id/viewBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgBack"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:src="@drawable/return_icon"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:textSize="@dimen/navigation_title_size"
            android:textColor="@android:color/black"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="1px"
            android:background="@color/default_shadow_color"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_20"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:baselineAligned="false"
            android:layout_marginTop="@dimen/margin_30"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edReMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:paddingBottom="@dimen/margin_10"
                android:textSize="@dimen/content_normal_size"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/login_mobile"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:paddingBottom="@dimen/margin_10">

                <EditText
                    android:id="@+id/edReVerification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/content_normal_size"
                    android:focusable="true"
                    android:inputType="number"
                    android:focusableInTouchMode="true"
                    android:hint="@string/register_identy"/>

                <TextView
                    android:id="@+id/tvRegOtp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:gravity="end|center_vertical"
                    android:text="@string/login_verify_code"
                    android:textColor="@color/default_shadow_color"
                    android:textSize="@dimen/content_normal_size" />


            </RelativeLayout>


            <EditText
                android:id="@+id/edRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:paddingBottom="@dimen/padding_10"
                android:textSize="@dimen/content_normal_size"
                android:focusable="true"
                android:inputType="textPassword"
                android:focusableInTouchMode="true"
                android:hint="@string/login_password"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btnRegConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textSize="@dimen/content_normal_size"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_30"
                android:background="@drawable/button_back"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvReForgot"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_normal_size"
                android:text="@string/login_forgot_password"/>
            <TextView
                android:id="@+id/tvReLogin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_normal_size"
                android:text="@string/register_login"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>