<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Personality.FeedbackActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgFeedBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/return_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textSize="@dimen/navigation_title_size"
                android:textColor="@android:color/black"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="1px"
        android:background="@color/default_shadow_color"
        android:text="" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F4F4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/padding_20"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edFeedback"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:hint="@string/feedback_edit_hint"
                android:inputType="textMultiLine"
                android:lines="25"
                android:minLines="6"
                android:gravity="top|left"
                android:maxLines="35"
                android:scrollbars="vertical"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnFeedbackSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_back"/>
    </RelativeLayout>



</LinearLayout>